Opened 14 years ago

Closed 14 years ago

Last modified 14 years ago

#7696 closed bug (fixed)

[Tracker] crashes after undoing delete action in query window

Reported by: diver Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Tracker Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

This is hrev42188, gcc4hybrid.

While trying to reproduce #1592 I noticed that Tracker now crashes after undoing (Alt+z) delete action in query window.

Thread 638 caused an exception: Segment violation
[...]
[Switching to team /boot/system/Tracker (122) thread w>/boot/home/queries/Name = 1 (638)]
0x00670ade in find_thread () from /boot/system/lib/libroot.so
(gdb) bt
#0  0x00670ade in find_thread () from /boot/system/lib/libroot.so
#1  0x006e08e8 in malloc () from /boot/system/lib/libroot.so
#2  0x0066a450 in find_directory () from /boot/system/lib/libroot.so
#3  0x003ad59b in find_directory () from /boot/system/lib/libbe.so
#4  0x005254be in BPrivate::FSGetTrashDir () from /boot/system/lib/libtracker.so
#5  0x00525818 in BPrivate::FSInTrashDir () from /boot/system/lib/libtracker.so
#6  0x005b129d in BPrivate::TTracker::InTrashNode () from /boot/system/lib/libtracker.so
#7  0x00596e1d in BPrivate::BQueryPoseView::ShouldShowPose () from /boot/system/lib/libtracker.so
#8  0x0058f4d0 in BPrivate::BPoseView::EntryMoved () from /boot/system/lib/libtracker.so
#9  0x0058d668 in BPrivate::BPoseView::FSNotification () from /boot/system/lib/libtracker.so
#10 0x0056f4fd in BPrivate::PendingNodeMonitorCache::PoseCreatedOrMoved () from /boot/system/lib/libtracker.so
#11 0x0058f60f in BPrivate::BPoseView::EntryMoved () from /boot/system/lib/libtracker.so
#12 0x0058d668 in BPrivate::BPoseView::FSNotification () from /boot/system/lib/libtracker.so
#13 0x0056f4fd in BPrivate::PendingNodeMonitorCache::PoseCreatedOrMoved () from /boot/system/lib/libtracker.so
#14 0x0058f60f in BPrivate::BPoseView::EntryMoved () from /boot/system/lib/libtracker.so
#15 0x0058d668 in BPrivate::BPoseView::FSNotification () from /boot/system/lib/libtracker.so
#16 0x0056f4fd in BPrivate::PendingNodeMonitorCache::PoseCreatedOrMoved ()
[...]
#901 0x0056f4fd in BPrivate::PendingNodeMonitorCache::PoseCreatedOrMoved () from /boot/system/lib/libtracker.so
#902 0x0058f60f in BPrivate::BPoseView::EntryMoved () from /boot/system/lib/libtracker.so
#903 0x0058d668 in BPrivate::BPoseView::FSNotification () from /boot/system/lib/libtracker.so
#904 0x0056f4fd in BPrivate::PendingNodeMonitorCache::PoseCreatedOrMoved () from /boot/system/lib/libtracker.so
#905 0x0058f60f in BPrivate::BPoseView::EntryMoved () from /boot/system/lib/libtracker.so
#906 0x0058d668 in BPrivate::BPoseView::FSNotification () from /boot/system/lib/libtracker.so
#907 0x0058e47e in BPrivate::BPoseView::MessageReceived () from /boot/system/lib/libtracker.so
#908 0x0059736f in BPrivate::BQueryPoseView::MessageReceived () from /boot/system/lib/libtracker.so
#909 0x002cbbbc in BLooper::DispatchMessage () from /boot/system/lib/libbe.so
#910 0x00392503 in BWindow::DispatchMessage () from /boot/system/lib/libbe.so
#911 0x0038ddd5 in BWindow::task_looper () from /boot/system/lib/libbe.so
#912 0x002cd41e in BLooper::_task0_ () from /boot/system/lib/libbe.so
#913 0x0066d20d in thread_entry () from /boot/system/lib/libroot.so
#914 0x701c5fec in ?? ()
(gdb)

Change History (3)

comment:1 by anevilyak, 14 years ago

Owner: changed from axeld to anevilyak
Status: newassigned

comment:2 by anevilyak, 14 years ago

Resolution: fixed
Status: assignedclosed

Fixed in hrev42229. There's still another issue related to that code though, since sometimes on undelete PoseView decides the pose shouldn't be visible and doesn't actually show it again until you close/reopen the window. Unrelated though, so making a new ticket for that one.

comment:3 by diver, 14 years ago

Sounds like #1592.

Note: See TracTickets for help on using tickets.