Remove the monitor item before calling FSNotification() on it. Otherwise, in some cases PoseView would call back into PoseCreatedOrMoved(), leading to an infinite recursion.

Fixes #7696.



git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@42229 a95241bf-73f2-0310-859d-f6bbb57e9c96